--- a/app/views/investigations/_list_plainImages.html.erb
+++ b/app/views/investigations/_list_plainImages.html.erb
@@ -10,11 +10,11 @@
     if damage.image2.present?
 %>
       <div id="sonsyo-<%= sonsyo.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag damage.image2, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" crossorigin %>
+        <%= image_tag damage.image2, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" %>
       </div>
   <% elsif damage.image1.present? %>  
       <div id="sonsyo-<%= sonsyo.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag damage.image1, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" crossorigin %>
+        <%= image_tag damage.image1, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" %>
       </div>  
   <%
     end # END OF if damage.image1.present?
