--- a/app/views/slopes/_wb.html.erb
+++ b/app/views/slopes/_wb.html.erb
@@ -19,7 +19,7 @@
     <td>家屋No.</td>
     <td>
       <div style="height:12px; overflow:hidden;">
-        <%= house.id %>
+        <%= house.house_number %>
       </div>  
     </td>
     <td>写真No.</td>
