--- a/app/views/damages/show.html.erb
+++ b/app/views/damages/show.html.erb
@@ -20,138 +20,5 @@
 
 <h2 class="text-center">損傷：No.<%= @sonsyo.number %>の撮影（<%= survey_type_name %>）</h2>
 <%= link_to '編集', edit_damage_path(sonsyo_id: @sonsyo.id, survey_type: survey_type), :class=>"btn btn-primary" %>
-
-<div class="post-img">
-  <%= image_tag @damage.image1 %>
-  <% unless @sonsyo.room_name == "全景" %>
-    <% if @damage.position_wb == 0 %>
-      <!-- 左上 -->
-      <div class="wb_left_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>  
-    <% elsif @damage.position_wb == 1 %>
-      <!-- 上 -->
-      <div class="wb_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 2 %>
-      <!-- 右上 -->
-      <div class="wb_right_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 3 %>
-      <!-- 右下 -->
-      <div class="wb_right_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 4 %>
-      <!-- 下 -->
-      <div class="wb_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>
-    <% elsif @damage.position_wb == 5 %>
-      <!-- 左下 -->
-      <div class="wb_left_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>
-    
-    <% elsif @damage.position_wb == 6 %>
-      <!-- 左上（横置き） -->
-      <div class="wb_yoko_left_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>  
-    <% elsif @damage.position_wb == 7 %>
-      <!-- 上（横置き） -->
-      <div class="wb_yoko_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 8 %>
-      <!-- 右上（横置き） -->
-      <div class="wb_yoko_right_top"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 9 %>
-      <!-- 右下（横置き） -->
-      <div class="wb_yoko_right_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>    
-    <% elsif @damage.position_wb == 10 %>
-      <!-- 下（横置き） -->
-      <div class="wb_yoko_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>
-    <% else %>
-      <!-- 左下（横置き） -->
-      <div class="wb_yoko_left_down"><%= render 'damages/wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %></div>
-    <% end %>
-  <% end %>
-</div>
-
-<style>
-.post-img {
-  position: relative;
-  margin-top:10px;
-  width: 60%;
-  font-size: 60%;
-}
-.post-img > img {
-  width: 100%;
-}
-
-.post-img > .wb_left_top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 120px;
-  height: 150px;
-}
-.post-img > .wb_top {
-  position: absolute;
-  top: 0;
-  left: 40%;
-  width: 120px;
-  height: 150px;
-}
-.post-img > .wb_right_top {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.post-img > .wb_right_down {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.post-img > .wb_down {
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-}
-.post-img > .wb_left_down {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-
-.post-img > .wb_yoko_left_top {
-  position: absolute;
-  top: 170px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_top {
-  position: absolute;
-  top: 170px;
-  left: calc(50% - 100px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_top {
-  position: absolute;
-  top: 170px;
-  right: 33px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_down {
-  position: absolute;
-  bottom: -203px;
-  right: 33px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_down {
-  position: absolute;
-  bottom: -203px;
-  left: calc(50% - 100px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_left_down {
-  position: absolute;
-  bottom: -203px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-</style>
+<!-- 写真 -->
+<%= render 'damages/photo_with_wb', { house: @house, sonsyo: @sonsyo, damage: @damage } %>
