--- a/app/views/slopes/show.html.erb
+++ b/app/views/slopes/show.html.erb
@@ -41,130 +41,5 @@
 
 <h2 class="text-center">傾斜：<%= disp_alphabet(@keisya.number) %>の撮影（<%= survey_type_name %>）</h2>
 <%= link_to '編集', edit_slope_path(keisya_id: @keisya.id, survey_type: survey_type), :class=>"btn btn-primary" %>
-
-<div class="post-img">
-  <%= image_tag @slope.image1 %>
-  <% if @slope.position_wb == 0 %>
-    <!-- 左上 -->
-    <div class="wb_left_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>  
-  <% elsif @slope.position_wb == 1 %>
-    <!-- 上 -->
-    <div class="wb_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 2 %>
-    <!-- 右上 -->
-    <div class="wb_right_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 3 %>
-    <!-- 右下 -->
-    <div class="wb_right_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 4 %>
-    <!-- 下 -->
-    <div class="wb_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>
-  <% elsif @slope.position_wb == 5 %>
-    <!-- 左下 -->
-    <div class="wb_left_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>
-  <% elsif @slope.position_wb == 6 %>
-    <!-- 左上（横置き） -->
-    <div class="wb_yoko_left_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>  
-  <% elsif @slope.position_wb == 7 %>
-    <!-- 上（横置き） -->
-    <div class="wb_yoko_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 8 %>
-    <!-- 右上（横置き） -->
-    <div class="wb_yoko_right_top"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 9 %>
-    <!-- 右下（横置き） -->
-    <div class="wb_yoko_right_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>    
-  <% elsif @slope.position_wb == 10 %>
-    <!-- 下（横置き） -->
-    <div class="wb_yoko_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>
-  <% else %>
-    <!-- 左下（横置き） -->
-    <div class="wb_yoko_left_down"><%= render 'slopes/wb', { house: @house, keisya: @keisya, slope: @slope } %></div>
-  <% end %>
-</div>
-
-<style>
-.post-img {
-  position: relative;
-  margin-top:10px;
-  width: 60%;
-  font-size: 60%;
-}
-.post-img > img {
-  width: 100%;
-}
-.post-img > .wb_left_top {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.post-img > .wb_top {
-  position: absolute;
-  top: 0;
-  left: 40%;
-}
-.post-img > .wb_right_top {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-.post-img > .wb_right_down {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.post-img > .wb_down {
-  position: absolute;
-  bottom: 0;
-  left: 40%;
-}
-.post-img > .wb_left_down {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-
-.post-img > .wb_yoko_left_top {
-  position: absolute;
-  top: 170px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_top {
-  position: absolute;
-  top: 170px;
-  left: calc(50% - 85px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_top {
-  position: absolute;
-  top: 170px;
-  right: -12px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_right_down {
-  position: absolute;
-  bottom: -158px;
-  right: -12px;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_down {
-  position: absolute;
-  bottom: -158px;
-  left: calc(50% - 85px);
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-.post-img > .wb_yoko_left_down {
-  position: absolute;
-  bottom: -158px;
-  left: 0;
-  transform:rotate(-90deg);
-  transform-origin:left top;
-}
-</style>
+<!-- 写真 -->
+<%= render 'slopes/photo_with_wb', { house: @house, keisya: @keisya, slope: @slope } %>
