--- a/app/views/investigations/_list_images.html.erb
+++ b/app/views/investigations/_list_images.html.erb
@@ -10,52 +10,12 @@
     
     if damage.image1.present?
 %>
-      <div id="sonsyo-<%= sonsyo.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag damage.image1, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" %>
-        <% if damage.position_wb == 0 %>
-          <!-- 左上 -->
-          <div style="position: absolute; top: 0; left: 0;">
-        <% elsif damage.position_wb == 1 %>
-          <!-- 上 -->
-          <div style="position: absolute; top: 0; left: 40%;">
-        <% elsif damage.position_wb == 2 %>
-          <!-- 右上 -->
-          <div style="position: absolute; top: 0; right: 0;">
-        <% elsif damage.position_wb == 3 %>
-          <!-- 右下 -->
-          <div style="position: absolute; bottom: 0; right: 0;">
-        <% elsif damage.position_wb == 4 %>
-          <!-- 下 -->
-          <div style="position: absolute; bottom: 0; left: 40%;">
-        <% elsif damage.position_wb == 5 %>
-          <!-- 左下 -->
-          <div style="position: absolute; bottom: 0; left: 0;">
-        <% elsif damage.position_wb == 6 %>
-          <!-- 左上（横置き） -->
-          <div style="position: absolute; top: 170px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif damage.position_wb == 7 %>
-          <!-- 上（横置き） -->
-          <div style="position: absolute; top: 170px; left: calc(50% - 100px); transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif damage.position_wb == 8 %>
-          <!-- 右上（横置き） -->
-          <div style="position: absolute; top: 170px; right: 33px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif damage.position_wb == 9 %>
-          <!-- 右下（横置き） -->
-          <div style="position: absolute; bottom: -203px; right: 33px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif damage.position_wb == 10 %>
-          <!-- 下（横置き） -->
-          <div style="position: absolute; bottom: -203px; left: calc(50% - 100px); transform:rotate(-90deg); transform-origin:left top;">
-        <% else %>
-          <!-- 左下（横置き） -->
-          <div style="position: absolute; bottom: -203px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% end %><!-- END OF if damage.position_wb == 0 -->
-          <%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: damage } %>
-        </div>
-      </div>
-  <% 
+      <!-- 写真 -->
+      <%= render 'damages/photo_with_wb', { house: house, sonsyo: sonsyo, damage: damage } %>
+<% 
     end # END OF if damage.image1.present?
   end # END OF sonsyos.each do |sonsyo|
-  %>
+%>
   <!-- 
   
     傾斜↓
@@ -65,48 +25,8 @@
     slope = keisya.slopes.find_by(survey_type: survey_type)
     if slope.image1.present?
   %>
-      <div id="keisya-<%= keisya.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag slope.image1, id: "keisya-" + keisya.id.to_s + "_img", style: "width: 100%;" %>
-        <% if slope.position_wb == 0 %>
-          <!-- 左上 -->
-          <div style="position: absolute; top: 0; left: 0;">
-        <% elsif slope.position_wb == 1 %>
-          <!-- 上 -->
-          <div style="position: absolute; top: 0; left: 40%;">
-        <% elsif slope.position_wb == 2 %>
-          <!-- 右上 -->
-          <div style="position: absolute; top: 0; right: 0;">
-        <% elsif slope.position_wb == 3 %>
-          <!-- 右下 -->
-          <div style="position: absolute; bottom: 0; right: 0;">
-        <% elsif slope.position_wb == 4 %>
-          <!-- 下 -->
-          <div style="position: absolute; bottom: 0; left: 40%;">
-        <% elsif slope.position_wb == 5 %>
-          <!-- 左下 -->
-          <div style="position: absolute; bottom: 0; left: 0;">
-        <% elsif slope.position_wb == 6 %>
-          <!-- 左上（横置き） -->
-          <div style="position: absolute; top: 170px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif slope.position_wb == 7 %>
-          <!-- 上（横置き） -->
-          <div style="position: absolute; top: 170px; left: calc(50% - 85px); transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif slope.position_wb == 8 %>
-          <!-- 右上（横置き） -->
-          <div style="position: absolute; top: 170px; right: -12px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif slope.position_wb == 9 %>
-          <!-- 右下（横置き） -->
-          <div style="position: absolute; bottom: -158px; right: -12px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif slope.position_wb == 10 %>
-          <!-- 下（横置き） -->
-          <div style="position: absolute; bottom: -158px; left: calc(50% - 85px); transform:rotate(-90deg); transform-origin:left top;">
-        <% else %>
-          <!-- 左下（横置き） -->
-          <div style="position: absolute; bottom: -158px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% end %><!-- END OF if slope.position_wb == 0 -->
-          <%= render 'slopes/wb', { house: house, keisya: keisya, slope: slope } %>
-        </div>
-      </div>
+      <!-- 写真 -->
+      <%= render 'slopes/photo_with_wb', { house: house, keisya: keisya, slope: slope } %>
   <% 
     end # END OF if slope.image1.present?
   end # END OF keisyas.each do |keisya|
@@ -120,48 +40,8 @@
     post = point.posts.find_by(survey_type: survey_type)
     if post.image1.present?
   %>
-      <div id="point-<%= point.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag post.image1, id: "point-" + point.id.to_s + "_img", style: "width: 100%;" %>
-        <% if post.position_wb == 0 %>
-          <!-- 左上 -->
-          <div style="position: absolute; top: 0; left: 0;">
-        <% elsif post.position_wb == 1 %>
-          <!-- 上 -->
-          <div style="position: absolute; top: 0; left: 40%;">
-        <% elsif post.position_wb == 2 %>
-          <!-- 右上 -->
-          <div style="position: absolute; top: 0; right: 0;">
-        <% elsif post.position_wb == 3 %>
-          <!-- 右下 -->
-          <div style="position: absolute; bottom: 0; right: 0;">
-        <% elsif post.position_wb == 4 %>
-          <!-- 下 -->
-          <div style="position: absolute; bottom: 0; left: 40%;">
-        <% elsif post.position_wb == 5 %>
-          <!-- 左下 -->
-          <div style="position: absolute; bottom: 0; left: 0;">
-        <% elsif post.position_wb == 6 %>
-          <!-- 左上（横置き） -->
-          <div style="position: absolute; top: 170px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif post.position_wb == 7 %>
-          <!-- 上（横置き） -->
-          <div style="position: absolute; top: 170px; left: calc(50% - 66px); transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif post.position_wb == 8 %>
-          <!-- 右上（横置き） -->
-          <div style="position: absolute; top: 170px; right: -34px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif post.position_wb == 9 %>
-          <!-- 右下（横置き） -->
-          <div style="position: absolute; bottom: -136px; right: -34px; transform:rotate(-90deg); transform-origin:left top;">
-        <% elsif post.position_wb == 10 %>
-          <!-- 下（横置き） -->
-          <div style="position: absolute; bottom: -136px; left: calc(50% - 66px); transform:rotate(-90deg); transform-origin:left top;">
-        <% else %>
-          <!-- 左下（横置き） -->
-          <div style="position: absolute; bottom: -136px; left: 0; transform:rotate(-90deg); transform-origin:left top;">
-        <% end %><!-- END OF if post.position_wb == 0 -->
-          <%= render 'posts/wb', { house: house, point: point, post: post } %>
-        </div>
-      </div>
+      <!-- 写真 -->
+      <%= render 'posts/photo_with_wb', { house: house, point: point, post: post } %>
 <% 
     end # END OF if post.image1.present?
   end # END OF points.each do |point|
@@ -186,7 +66,7 @@ function handleDownload(path, name) {
   // chrome,firefox
   var a = document.createElement('a');
   a.download = name;
-  //  a.href = "cgi-bin/sample.py?f="+path;
+  //a.href = "cgi-bin/sample.py?f="+path;
   a.href = path;  
   
   document.body.appendChild(a);
