--- a/app/views/investigations/_list_plainImages.html.erb
+++ b/app/views/investigations/_list_plainImages.html.erb
@@ -9,12 +9,12 @@
     damage = sonsyo.damages.find_by(survey_type: survey_type)
     if damage.image2.present?
 %>
-      <div id="sonsyo-<%= sonsyo.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag damage.image2, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="sonsyo-<%= sonsyo.id %>" class="post-img">
+        <%= image_tag damage.image2, id: "sonsyo-" + sonsyo.id.to_s + "_img" %>
       </div>
   <% elsif damage.image1.present? %>  
-      <div id="sonsyo-<%= sonsyo.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag damage.image1, id: "sonsyo-" + sonsyo.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="sonsyo-<%= sonsyo.id %>" class="post-img">
+        <%= image_tag damage.image1, id: "sonsyo-" + sonsyo.id.to_s + "_img" %>
       </div>  
   <%
     end # END OF if damage.image1.present?
@@ -29,12 +29,12 @@
     slope = keisya.slopes.find_by(survey_type: survey_type)
     if slope.image2.present?
   %>
-      <div id="keisya-<%= keisya.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag slope.image2, id: "keisya-" + keisya.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="keisya-<%= keisya.id %>" class="post-img">
+        <%= image_tag slope.image2, id: "keisya-" + keisya.id.to_s + "_img" %>
       </div>
   <% elsif slope.image1.present? %>
-      <div id="keisya-<%= keisya.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag slope.image1, id: "keisya-" + keisya.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="keisya-<%= keisya.id %>" class="post-img">
+        <%= image_tag slope.image1, id: "keisya-" + keisya.id.to_s + "_img" %>
       </div>  
   <% 
     end # END OF if slope.image1.present?
@@ -49,18 +49,31 @@
     post = point.posts.find_by(survey_type: survey_type)
     if post.image2.present?
   %>
-      <div id="point-<%= point.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag post.image2, id: "point-" + point.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="point-<%= point.id %>" class="post-img">
+        <%= image_tag post.image2, id: "point-" + point.id.to_s + "_img" %>
       </div>
   <% elsif post.image1.present? %>
-      <div id="point-<%= point.id %>" style="font-size: 60%; width: 60%; position: relative; margin-bottom: 20px;">
-        <%= image_tag post.image1, id: "point-" + point.id.to_s + "_img", style: "width: 100%;" %>
+      <div id="point-<%= point.id %>" class="post-img">
+        <%= image_tag post.image1, id: "point-" + point.id.to_s + "_img" %>
       </div>
 <% 
     end # END OF if post.image1.present?
   end # END OF points.each do |point|
 end
 %>
+
+<style>
+.post-img {
+  position: relative;
+  margin-top:10px;
+  margin-bottom:20px;
+  width: 60%;
+  font-size: 60%;
+}
+.post-img > img {
+  width: 100%;
+}
+</style>
 
 <script>
 function handleDownload(path, name) {
