--- a/app/views/investigations/pages/ongoing/_sonsyochosasyo.html.erb
+++ b/app/views/investigations/pages/ongoing/_sonsyochosasyo.html.erb
@@ -179,31 +179,11 @@
         <% if ongoing_damage != nil %>
           <% num = num + 1 %>
           <tr>
-            <td style="max-height: 30%;">
-              <div class="post-img"> 
-                <%= image_tag ongoing_damage.image1 %>
-                <% if ongoing_damage.position_wb == 0 %>
-                  <!-- 左上 -->
-                  <div class="wb_left_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>  
-                <% elsif ongoing_damage.position_wb == 1 %>
-                  <!-- 上 -->
-                  <div class="wb_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                <% elsif ongoing_damage.position_wb == 2 %>
-                  <!-- 右上 -->
-                  <div class="wb_right_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                <% elsif ongoing_damage.position_wb == 3 %>
-                  <!-- 右下 -->
-                  <div class="wb_right_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                <% elsif ongoing_damage.position_wb == 4 %>
-                  <!-- 下 -->
-                  <div class="wb_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                <% else %>
-                  <!-- 左下 -->
-                  <div class="wb_left_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                <% end %>
-              </div>
+            <td style="height: 30%;">
+              <!-- 写真 -->
+              <%= render 'damages/photo_with_wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %>
             </td>
-            <td style="min-width: 180px;">損傷：No.<%= sonsyo.number %></td>
+            <td style="min-width: 130px;">損傷：No.<%= sonsyo.number %></td>
           </tr>
         <% end %>
         <% if num < sonsyos.length %>      
@@ -212,31 +192,11 @@
           <% if ongoing_damage != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag ongoing_damage.image1 %>
-                  <% if ongoing_damage.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>  
-                  <% elsif ongoing_damage.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'damages/photo_with_wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %>
               </td>
-              <td style="min-width: 180px;">損傷：No.<%= sonsyo.number %></td>
+              <td style="min-width: 130px;">損傷：No.<%= sonsyo.number %></td>
             </tr>
           <% end %>
         <% end %>
@@ -246,31 +206,11 @@
           <% if ongoing_damage != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag ongoing_damage.image1 %>
-                  <% if ongoing_damage.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>  
-                  <% elsif ongoing_damage.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>    
-                  <% elsif ongoing_damage.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'damages/wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'damages/photo_with_wb', { house: house, sonsyo: sonsyo, damage: ongoing_damage } %>
               </td>
-              <td style="min-width: 180px;">損傷：No.<%= sonsyo.number %></td>
+              <td style="min-width: 130px;">損傷：No.<%= sonsyo.number %></td>
             </tr>
           <% end %>
         <% end %>
