--- a/app/views/investigations/pages/ongoing/_tatemonosuijyunsokuryokekkahyo.html.erb
+++ b/app/views/investigations/pages/ongoing/_tatemonosuijyunsokuryokekkahyo.html.erb
@@ -40,31 +40,11 @@
         <% if ongoing_post != nil %>
           <% num = num + 1 %>
           <tr>
-            <td style="max-height: 30%;">
-              <div class="post-img"> 
-                <%= image_tag ongoing_post.image1 %>
-                <% if ongoing_post.position_wb == 0 %>
-                  <!-- 左上 -->
-                  <div class="wb_left_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>  
-                <% elsif ongoing_post.position_wb == 1 %>
-                  <!-- 上 -->
-                  <div class="wb_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                <% elsif ongoing_post.position_wb == 2 %>
-                  <!-- 右上 -->
-                  <div class="wb_right_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                <% elsif ongoing_post.position_wb == 3 %>
-                  <!-- 右下 -->
-                  <div class="wb_right_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                <% elsif ongoing_post.position_wb == 4 %>
-                  <!-- 下 -->
-                  <div class="wb_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                <% else %>
-                  <!-- 左下 -->
-                  <div class="wb_left_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                <% end %>
-              </div>
+            <td style="height: 30%;">
+              <!-- 写真 -->
+              <%= render 'posts/photo_with_wb', { house: house, point: point, post: ongoing_post } %>
             </td>
-            <td style="min-width: 180px;">測点：<%= point.number %></td>
+            <td style="min-width: 130px;">測点：<%= point.number %></td>
           </tr>
         <% end %>
         <% if num < points.length %>      
@@ -73,31 +53,11 @@
           <% if ongoing_post != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag ongoing_post.image1 %>
-                  <% if ongoing_post.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>  
-                  <% elsif ongoing_post.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'posts/photo_with_wb', { house: house, point: point, post: ongoing_post } %>
               </td>
-              <td style="min-width: 180px;">測点：<%= point.number %></td>
+              <td style="min-width: 130px;">測点：<%= point.number %></td>
             </tr>
           <% end %>
         <% end %>
@@ -107,31 +67,11 @@
           <% if ongoing_post != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag ongoing_post.image1 %>
-                  <% if ongoing_post.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>  
-                  <% elsif ongoing_post.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>    
-                  <% elsif ongoing_post.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'posts/wb', { house: house, point: point, post: ongoing_post } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'posts/photo_with_wb', { house: house, point: point, post: ongoing_post } %>
               </td>
-              <td style="min-width: 180px;">測点：<%= point.number %></td>
+              <td style="min-width: 130px;">測点：<%= point.number %></td>
             </tr>
           <% end %>
         <% end %>
