--- a/app/views/investigations/pages/pre/_tatemonokeisyasokuteikekkahyo.html.erb
+++ b/app/views/investigations/pages/pre/_tatemonokeisyasokuteikekkahyo.html.erb
@@ -78,31 +78,11 @@
         <% if pre_slope != nil %>
           <% num = num + 1 %>
           <tr>
-            <td style="max-height: 30%;">
-              <div class="post-img"> 
-                <%= image_tag pre_slope.image1 %>
-                <% if pre_slope.position_wb == 0 %>
-                  <!-- 左上 -->
-                  <div class="wb_left_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>  
-                <% elsif pre_slope.position_wb == 1 %>
-                  <!-- 上 -->
-                  <div class="wb_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                <% elsif pre_slope.position_wb == 2 %>
-                  <!-- 右上 -->
-                  <div class="wb_right_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                <% elsif pre_slope.position_wb == 3 %>
-                  <!-- 右下 -->
-                  <div class="wb_right_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                <% elsif pre_slope.position_wb == 4 %>
-                  <!-- 下 -->
-                  <div class="wb_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                <% else %>
-                  <!-- 左下 -->
-                  <div class="wb_left_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                <% end %>
-              </div>
+            <td style="height: 30%;">
+              <!-- 写真 -->
+              <%= render 'slopes/photo_with_wb', { house: house, keisya: keisya, slope: pre_slope } %>
             </td>
-            <td style="min-width: 180px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
+            <td style="min-width: 130px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
           </tr>
         <% end %>
         <% if num < keisyas.length %>      
@@ -111,31 +91,11 @@
           <% if pre_slope != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag pre_slope.image1 %>
-                  <% if pre_slope.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>  
-                  <% elsif pre_slope.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'slopes/photo_with_wb', { house: house, keisya: keisya, slope: pre_slope } %>
               </td>
-              <td style="min-width: 180px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
+              <td style="min-width: 130px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
             </tr>
           <% end %>
         <% end %>
@@ -145,31 +105,11 @@
           <% if pre_slope != nil %>
             <% num = num + 1 %>
             <tr>
-              <td style="max-height: 30%;">
-                <div class="post-img"> 
-                  <%= image_tag pre_slope.image1 %>
-                  <% if pre_slope.position_wb == 0 %>
-                    <!-- 左上 -->
-                    <div class="wb_left_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>  
-                  <% elsif pre_slope.position_wb == 1 %>
-                    <!-- 上 -->
-                    <div class="wb_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 2 %>
-                    <!-- 右上 -->
-                    <div class="wb_right_top"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 3 %>
-                    <!-- 右下 -->
-                    <div class="wb_right_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>    
-                  <% elsif pre_slope.position_wb == 4 %>
-                    <!-- 下 -->
-                    <div class="wb_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                  <% else %>
-                    <!-- 左下 -->
-                    <div class="wb_left_down"><%= render 'slopes/wb', { house: house, keisya: keisya, slope: pre_slope } %></div>
-                  <% end %>
-                </div>
+              <td style="height: 30%;">
+                <!-- 写真 -->
+                <%= render 'slopes/photo_with_wb', { house: house, keisya: keisya, slope: pre_slope } %>
               </td>
-              <td style="min-width: 180px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
+              <td style="min-width: 130px;">傾斜：<%= disp_alphabet(keisya.number) %></td>
             </tr>
           <% end %>
         <% end %>
