--- a/app/views/investigations/pdf_pre_survey.html.erb
+++ b/app/views/investigations/pdf_pre_survey.html.erb
@@ -80,6 +80,53 @@ body {
   bottom: 0;
   left: 0;
 }
+
+.post-img > .wb_yoko_left_top {
+  position: absolute;
+  top: 200px;
+  left: 0;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_top {
+  position: absolute;
+  top: 200px;
+  left: calc(50% - 66px);
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_right_top {
+  position: absolute;
+  top: 200px;
+  right: -87px;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_right_down {
+  position: absolute;
+  bottom: -113px;
+  right: -87px;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_down {
+  position: absolute;
+  bottom: -113px;
+  left: calc(50% - 66px);
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+.post-img > .wb_yoko_left_down {
+  position: absolute;
+  bottom: -113px;
+  left: 0;
+  transform:rotate(-90deg);
+  transform-origin:left top;
+}
+
+
+
+
 @page {
     size: A4;
     margin: 0;
